# AlphaSwarm

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  RULES.md  pyproject.toml  run.py  数据仓库索引.md
config/: config.yaml
dashboard/: index.html
prompts/skills/rdagent-hypothesis-generation/: SKILL.md
prompts/skills/rdagent-hypothesis-to-factor-task/: SKILL.md
src/: agent_calculator.py  agent_evaluator.py  agent_ideator.py  agent_optimizer.py  agent_tools.py  base_factor_generator.py  base_factor_registry.py  dashboard_server.py  dataloader.py  expression_utils.py  factor_family.py  llm_client.py  operators.py  pipeline.py  schemas.py  skill_loader.py  web_server.py
